# kaidee

./: .gitignore  ARCHITECTURE.md  LICENSE  PLAN.md  compile.py  presets.json  pyproject.toml
input/source/: source3.py
src/: __init__.py  assets.py  compile.py  drift.py  gpu.py  input.py  live.py  midi.py  postprocess.py  recorder.py  transforms.py
src/modes/: __init__.py  base.py  displacement.py  (+1 more)
tests/: test_mode_helpers.py  test_modes.py  test_params.py  test_postprocess.py
v1/: README.md  pyproject.toml
v1/input/source/: source1.ts
v1/src/: audio.py  hud.py  live.py  params.py
v1/src/modes/: feedback.py  glitch.py  helpers.py  radial.py  strobe.py
v1/tests/: test_drift.py  test_postprocess.py  test_transforms.py
v2/: Cargo.toml
v2/crates/kaidee-analysis/: Cargo.toml
v2/crates/kaidee-analysis/src/: engine.rs  frame.rs  global.rs  lib.rs  stats.rs
v2/crates/kaidee-analysis/src/analysis/: analysis.md  beat.md  beat.rs  dynamics.md  dynamics.rs  levels.rs  mod.rs  pipeline.rs  spectral.md  spectral.rs
v2/crates/kaidee-analysis/src/analysis/beat/: beat.md  mod.rs
v2/crates/kaidee-analysis/src/analysis/spectral/: fft.md  fft.rs  iir.md  iir.rs  mod.rs  plan.md
v2/crates/kaidee-analysis/tests/: reference_audio.rs
v2/crates/kaidee-app/: Cargo.toml
v2/crates/kaidee-app/src/: main.rs  terminal_ui.rs  visualizer.rs
v2/fixtures/: Khabiar - Jacking Movement (Original Mix).reference.json  Matthias Schildger presents ACIDSEX - Acid-Base Reaction.reference.json  README.md
v2/tools/: README.md  analyze_reference.py  fixture.sh  requirements.txt
